--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       border-collapse: collapse;
     }
     td, th {
-      border: 1px solid #333;
+      border: 1px solid #cd1919;
       padding: 8px 15px;
     }
   </style>
